@@ -8,56 +8,62 @@
 namespace CIAO_CSL_DeadlineTest_Receiver_Impl
 {
 
-//============================================================
-  // Facet Executor Implementation Class: ConnectorStatusListener_exec_i
   //============================================================
-
-  ConnectorStatusListener_exec_i::ConnectorStatusListener_exec_i (Atomic_Boolean &incompatible)
-   : incompatible_ (incompatible)
+  // ConnectorStatusListener_exec_i
+  //============================================================
+  ConnectorStatusListener_exec_i::ConnectorStatusListener_exec_i (Atomic_Boolean &deadline_missed,
+                                                                  Atomic_ThreadId &thread_id)
+    : deadline_missed_ (deadline_missed),
+      thread_id_ (thread_id)
   {
   }
 
   ConnectorStatusListener_exec_i::~ConnectorStatusListener_exec_i (void)
   {
-
   }
 
   // Operations from ::CCM_DDS::ConnectorStatusListener
-  void ConnectorStatusListener_exec_i::on_inconsistent_topic(
-     ::DDS::Topic_ptr /*the_topic*/,
-     const DDS::InconsistentTopicStatus & /*status*/){
-    }
+  void ConnectorStatusListener_exec_i::on_inconsistent_topic (
+    ::DDS::Topic_ptr /*the_topic*/,
+    const DDS::InconsistentTopicStatus & /*status*/)
+  {
+  }
 
-  void ConnectorStatusListener_exec_i::on_requested_incompatible_qos(
+  void ConnectorStatusListener_exec_i::on_requested_incompatible_qos (
     ::DDS::DataReader_ptr /*the_reader*/,
-     const DDS::RequestedIncompatibleQosStatus & /*status*/)  {
-    }
+    const DDS::RequestedIncompatibleQosStatus & /*status*/)
+  {
+  }
 
-  void ConnectorStatusListener_exec_i::on_sample_rejected(
-     ::DDS::DataReader_ptr /*the_reader*/,
-     const DDS::SampleRejectedStatus & /*status*/)  {
-    }
+  void ConnectorStatusListener_exec_i::on_sample_rejected (
+    ::DDS::DataReader_ptr /*the_reader*/,
+    const DDS::SampleRejectedStatus & /*status*/)
+  {
+  }
 
-  void ConnectorStatusListener_exec_i::on_offered_deadline_missed(
-     ::DDS::DataWriter_ptr /*the_writer*/,
-     const DDS::OfferedDeadlineMissedStatus & /*status*/)  {
-     this->incompatible_ = true;
-    }
+  void ConnectorStatusListener_exec_i::on_offered_deadline_missed (
+    ::DDS::DataWriter_ptr /*the_writer*/,
+    const DDS::OfferedDeadlineMissedStatus & /*status*/)
+  {
+    this->thread_id_ = ACE_Thread::self ();
+    this->deadline_missed_ = true;
+  }
 
-  void ConnectorStatusListener_exec_i::on_offered_incompatible_qos(
-     ::DDS::DataWriter_ptr /*the_writer*/,
-     const DDS::OfferedIncompatibleQosStatus & /*status*/)  {
-   }
+  void ConnectorStatusListener_exec_i::on_offered_incompatible_qos (
+    ::DDS::DataWriter_ptr /*the_writer*/,
+    const DDS::OfferedIncompatibleQosStatus & /*status*/)
+  {
+  }
 
-  void ConnectorStatusListener_exec_i::on_unexpected_status(
+  void ConnectorStatusListener_exec_i::on_unexpected_status (
     ::DDS::Entity_ptr /*the_entity*/,
-    ::DDS::StatusKind /*status_kind*/)  {
-    }
+    ::DDS::StatusKind /*status_kind*/)
+  {
+  }
 
   //============================================================
-  // Facet Executor Implementation Class: TestTopic_RawListener_exec_i
+  // TestTopic_RawListener_exec_i
   //============================================================
-
   TestTopic_RawListener_exec_i::TestTopic_RawListener_exec_i (Atomic_ULong &received)
       : received_ (received)
   {
@@ -87,39 +93,13 @@ namespace CIAO_CSL_DeadlineTest_Receiver_Impl
     const ::CCM_DDS::ReadInfoSeq & /* info */)
   {
   }
-  //============================================================
-  // Facet Executor Implementation Class: PortStatusListener_exec_i
-  //============================================================
-
-  PortStatusListener_exec_i::PortStatusListener_exec_i (void)
-  {
-  }
-
-  PortStatusListener_exec_i::~PortStatusListener_exec_i (void)
-  {
-  }
-
-  // Operations from ::CCM_DDS::PortStatusListener
-
-  void
-    PortStatusListener_exec_i::on_requested_deadline_missed (
-    ::DDS::DataReader_ptr /* the_reader */,
-    const ::DDS::RequestedDeadlineMissedStatus & /* status */)
-  {
-  }
-
-  void
-  PortStatusListener_exec_i::on_sample_lost (
-    ::DDS::DataReader_ptr /* the_reader */,
-    const ::DDS::SampleLostStatus & /* status */)
-  {
-  }
 
   //============================================================
-  // Component Executor Implementation Class: Receiver_exec_iTestTopic_RawListener_exec_i ();
+  // Receiver_exec_i
   //============================================================
   Receiver_exec_i::Receiver_exec_i (void)
-    : incompatible_ (false)
+    : deadline_missed_ (false),
+      thread_id_listener_ (0)
   {
   }
 
@@ -141,13 +121,14 @@ namespace CIAO_CSL_DeadlineTest_Receiver_Impl
   Receiver_exec_i::get_info_out_status (void)
   {
     ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("new PortStatuslistener\n")));
-    return new PortStatusListener_exec_i ();
+    return ::CCM_DDS::CCM_PortStatusListener::_nil ();
   }
 
   ::CCM_DDS::CCM_ConnectorStatusListener_ptr
   Receiver_exec_i::get_info_out_connector_status (void)
   {
-    return new ConnectorStatusListener_exec_i (this->incompatible_);
+    return new ConnectorStatusListener_exec_i (this->deadline_missed_,
+                                               this->thread_id_listener_);
   }
 
   // Operations from Components::SessionComponent.
@@ -191,17 +172,39 @@ namespace CIAO_CSL_DeadlineTest_Receiver_Impl
   void
   Receiver_exec_i::ccm_remove (void)
   {
-     if(this->incompatible_.value ())
+     if (this->deadline_missed_.value ())
       {
-         ACE_ERROR ((LM_ERROR, ACE_TEXT ("ERROR: did receive the unexpected ")
-                               ACE_TEXT (" error 'on_offered_deadline_missed' in Receiver")
+        ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("OK : Received the expected ")
+                              ACE_TEXT ("'on_offered_deadline_missed' in Receiver\n")
                     ));
       }
     else
       {
-        ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("OK : Haven't received the un-expected ")
-                              ACE_TEXT ("'on_offered_deadline_missed' in Receiver\n")
+         ACE_ERROR ((LM_ERROR, ACE_TEXT ("ERROR: didn't receive the expected ")
+                               ACE_TEXT ("'on_offered_deadline_missed' in Receiver\n")
                     ));
+      }
+    if (this->thread_id_listener_.value () == 0)
+      {
+        ACE_ERROR ((LM_ERROR, "ERROR: "
+                               "Thread ID for ConnectorStatusListener not set!\n"));
+      }
+    else if (this->thread_id_listener_.value () == ACE_Thread::self ())
+      {
+        ACE_ERROR ((LM_ERROR, "ERROR: "
+                               "Thread switch for ConnectorStatusListener "
+                               "doesn't seem to work! "
+                               "listener <%u> - component <%u>\n",
+                               this->thread_id_listener_.value (),
+                               ACE_Thread::self ()));
+      }
+    else
+      {
+        ACE_DEBUG ((LM_DEBUG, "OK : "
+                               "Thread switch for ConnectorStatusListener seems OK. "
+                               "listener <%u> - component <%u>\n",
+                               this->thread_id_listener_.value (),
+                               ACE_Thread::self ()));
       }
   }
 
