@@ -13,17 +13,21 @@
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include "tao/LocalObject.h"
-#include "ace/Task.h"
+#include "ace/OS_NS_Thread.h"
 #include "ace/Reactor.h"
+#include "ace/Task.h"
 
 namespace CIAO_CSL_DeadlineTest_Receiver_Impl
 {
-  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::ULong > Atomic_ULong;
-  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::Boolean > Atomic_Boolean;
+  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::ULong> Atomic_ULong;
+  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::Boolean> Atomic_Boolean;
+  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, ACE_thread_t> Atomic_ThreadId;
 
-  
   class Receiver_exec_i;
-  
+
+  //============================================================
+  // TestTopic_RawListener_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export TestTopic_RawListener_exec_i
     : public virtual ::CCM_DDS::TestTopic::CCM_Listener,
       public virtual ::CORBA::LocalObject
@@ -32,73 +36,60 @@ namespace CIAO_CSL_DeadlineTest_Receiver_Impl
     TestTopic_RawListener_exec_i (Atomic_ULong &);
     virtual ~TestTopic_RawListener_exec_i (void);
 
-   
     virtual void
     on_one_data (
       const TestTopic & an_instance,
       const ::CCM_DDS::ReadInfo & info);
 
-
     virtual void
     on_many_data (
       const ::TestTopic_Seq & data,
-      const ::CCM_DDS::ReadInfoSeq & info );
+      const ::CCM_DDS::ReadInfoSeq & info);
 
   private:
     Atomic_ULong &received_;
   };
-  
-  
-class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
+
+
+  //============================================================
+  // ConnectorStatusListener_exec_i
+  //============================================================
+  class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
     : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    ConnectorStatusListener_exec_i (Atomic_Boolean &);
+    ConnectorStatusListener_exec_i (Atomic_Boolean &,
+                                    Atomic_ThreadId &);
+
     virtual ~ConnectorStatusListener_exec_i (void);
-    
+
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic, 
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
                                 const DDS::InconsistentTopicStatus & status);
     virtual
-    void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
                                         const DDS::RequestedIncompatibleQosStatus & status);
     virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader, 
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
                              const DDS::SampleRejectedStatus & status);
     virtual
-      void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
-                                     const DDS::OfferedDeadlineMissedStatus & status);
+      void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
+                                       const DDS::OfferedDeadlineMissedStatus & status);
     virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer, 
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
                                       const DDS::OfferedIncompatibleQosStatus & status);
     virtual
-      void on_unexpected_status( ::DDS::Entity_ptr the_entity,
-       ::DDS::StatusKind  status_kind);
-    private:
-    Atomic_Boolean &incompatible_;
-  
-  };
-  
-class RECEIVER_EXEC_Export PortStatusListener_exec_i
-    : public virtual ::CCM_DDS::CCM_PortStatusListener,
-      public virtual ::CORBA::LocalObject
-  {
-  public:
-    PortStatusListener_exec_i (void);
-    virtual ~PortStatusListener_exec_i (void);
-
-    virtual void
-    on_requested_deadline_missed (
-      ::DDS::DataReader_ptr the_reader,
-      const ::DDS::RequestedDeadlineMissedStatus & status);
-
-    virtual void
-    on_sample_lost (
-      ::DDS::DataReader_ptr the_reader,
-      const ::DDS::SampleLostStatus & status);
+    void on_unexpected_status (::DDS::Entity_ptr the_entity,
+                                ::DDS::StatusKind  status_kind);
+  private:
+    Atomic_Boolean &deadline_missed_;
+    Atomic_ThreadId &thread_id_;
   };
 
+  //============================================================
+  // Receiver_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export Receiver_exec_i
     : public virtual Receiver_Exec,
       public virtual ::CORBA::LocalObject
@@ -106,10 +97,6 @@ class RECEIVER_EXEC_Export PortStatusListener_exec_i
   public:
     Receiver_exec_i (void);
     virtual ~Receiver_exec_i (void);
-
-  //  virtual ::CORBA::Boolean raw_listen (void);
-
-  //  virtual void raw_listen (::CORBA::Boolean raw_listen);
 
     // Port operations.
     virtual ::CCM_DDS::TestTopic::CCM_Listener_ptr
@@ -120,7 +107,6 @@ class RECEIVER_EXEC_Export PortStatusListener_exec_i
 
     virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
     get_info_out_connector_status (void);
-
 
     // Operations from Components::SessionComponent.
     virtual void
@@ -136,7 +122,8 @@ class RECEIVER_EXEC_Export PortStatusListener_exec_i
   private:
     ::CSL_DeadlineTest::CCM_Receiver_Context_var context_;
     Atomic_ULong received_;
-    Atomic_Boolean incompatible_;
+    Atomic_Boolean deadline_missed_;
+    Atomic_ThreadId thread_id_listener_;
   };
 
   extern "C" RECEIVER_EXEC_Export ::Components::EnterpriseComponent_ptr
